Jump to note: Fix white theme

--- a/src/breeze.less
+++ b/src/breeze.less
@@ -13,8 +13,6 @@
 
     --breeze-separator-dim-color: #3f4246;
 
-    --breeze-dark-background-color: #1b1e20;
-    --breeze-dark-border-color: #535657;
     --title-row-height: 42px;
     --footer-ribbon-height: 31px;
     --breeze-scrollbar-border-radius: 24px;
