--- a/src/constants/dark.less
+++ b/src/constants/dark.less
@@ -65,6 +65,8 @@
 --breeze-contextmenu-shadow-color: rgb(0 0 0 / 50%);
 --breeze-contextmenu-shadow-radius: 10px;
 
+--breeze-input-background: #1b1e20;
+
 --breeze-button-border: #727679;
 --breeze-button-background-start: #373c41;
 --breeze-button-background-end: #303439;
