--- a/src/constants/light.less
+++ b/src/constants/light.less
@@ -65,6 +65,12 @@
 --breeze-contextmenu-shadow-color: rgb(128 128 128 / 50%);
 --breeze-contextmenu-shadow-radius: 10px;
 
+--breeze-input-background: white;
+
+--breeze-button-border: #b9babb;
+--breeze-button-background-start: #fcfcfc;
+--breeze-button-background-end: #f5f5f5;
+
 --breeze-editor-gutter-background: #f0f0f0;
---breeze-editor-gutter-foreground: #a0a0a0;
---breeze-editor-gutter-border: #d5d5d5;
+--breeze-editor-gutter-foreground: #f5f5f5;
+--breeze-editor-gutter-border: #b2b3b4;
