--- a/src/modals/general.less
+++ b/src/modals/general.less
@@ -15,7 +15,7 @@
     .form-control {
         border-color: var(--breeze-border) !important;
         font-size: var(--tree-font-size) !important;
-        background-color: var(--breeze-dark-background-color) !important;
+        background-color: var(--breeze-input-background) !important;
         height: 30px;
         padding: 0 6px;
         transition: border-color var(--breeze-transition-fast);
@@ -33,7 +33,7 @@
         }
 
         .input-group {
-            background-color: var(--breeze-dark-background-color) !important;
+            background-color: var(--breeze-input-background) !important;
 
             .input-group-append {
                 .input-group-text {                    
